# band-of-agents-hackathon

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml  render.yaml
docs/: agent-task-envelopes.md  agent-task-ledger.md  chrome-official-reading.html  claude-p-write-smoke.md  claude-runner-wrapper-smoke.md  competition-plan.md  demo-evidence-report.md  demo-runbook.md  deployment-notes.md  dual-agent-operating-protocol.md  feishu-lessons-for-band.md  judge-10-minute-experience.md  market-research-shortlist.html  official-research.md  project-concept.md  rfp-trustroom-prd.md  submission-checklist.md  trustroom-business-language-guide.md  trustroom-product-improvement-backlog.md  trustroom-today-todolist.md
figures/: dual-agent-trustroom-workflow.md  dual-agent-trustroom-workflow.mmd
reports/: trustroom_replay.example.jsonl
scripts/: benchmark_trustroom.py  build_submission_assets.mjs  check_dual_agent_changes.py  check_dual_agent_protocol.py  check_no_secrets.py  check_public_submission_ready.py  check_submission_assets.py  check_trustroom_readiness.py  run_claude_task.py  run_live_band_autonomous_smoke.py  run_live_band_smoke.py
tests/: test_agent_prompts.py  test_band_adapter.py  test_benchmark_trustroom.py  test_customer_export.py  test_dual_agent_changes.py  test_dual_agent_protocol.py  test_evolution.py  test_live_adapter_contract.py  test_live_band_autonomous_smoke.py  test_live_band_smoke.py  test_mock_runner.py  test_models.py  test_no_secrets.py  test_public_submission_ready.py  test_readiness.py  (+5 more)
(+35 files in other folders)
